<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top bar -->
    <LinearLayout
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">

        <ImageView
            android:src="@drawable/user"
            android:layout_height="40dp"
            android:layout_width="40dp"/>

        <TextView
            android:text="@string/greeting_text"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- Logo -->
    <ImageView
        android:src="@drawable/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="-20dp"
        android:layout_gravity="center"/>

    <!-- Section Title -->
    <TextView
        android:text="@string/land_title"
        android:textSize="30sp"
        android:textColor="@color/text_primary"
        android:fontFamily="@font/winter"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Pet Body Type Container -->
    <LinearLayout
        android:id="@+id/bodyTypeContainer"
        android:layout_width="348dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_box_container"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/winter"
            android:text="@string/body_type_label"
            android:textColor="@color/input_bg"
            android:textSize="20sp" />

        <FrameLayout
            android:id="@+id/bodyTypeFrameLayout"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_input_box">

            <!-- Body Type Value -->
            <TextView
                android:id="@+id/bodyTypeDisplayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/babelsans"
                android:textColor="@color/text_primary"
                android:textSize="14sp" />

        </FrameLayout>
    </LinearLayout>

    <!-- Weight Goal Container -->
    <LinearLayout
        android:id="@+id/weightGoalContainer"
        android:layout_width="348dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_box_container"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/winter"
            android:text="@string/weight_goal_label"
            android:textColor="@color/input_bg"
            android:textSize="20sp" />


        <FrameLayout
            android:id="@+id/weightGoalFrameLayout"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_input_box">

            <!-- Weight Goal value -->
            <TextView
                android:id="@+id/weightGoalDisplayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/babelsans"
                android:textColor="@color/text_primary"
                android:textSize="14sp" />

        </FrameLayout>
    </LinearLayout>

    <!-- Recommendation Container -->
    <LinearLayout
        android:id="@+id/recommendationContainer"
        android:layout_width="348dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_box_container"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/winter"
            android:text="@string/reco_label"
            android:textColor="@color/input_bg"
            android:textSize="20sp" />


        <FrameLayout
            android:id="@+id/recommendationFrameLayout"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_input_box">

            <!-- Weight Goal value -->
            <TextView
                android:id="@+id/recommendationDisplayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/babelsans"
                android:textColor="@color/text_primary"
                android:textSize="14sp" />

        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="282dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/winter"
        android:text="Customize"
        android:textColor="@color/btn_text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnFeed"
        android:layout_width="282dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button2"
        android:fontFamily="@font/winter"
        android:text="Feed Now!"
        android:textColor="@color/btn_text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_horizontal"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Bottom Nav -->
    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@drawable/bg_bottom_nav"
        android:padding="7dp"
        android:gravity="center"
        android:elevation="6dp">

        <!--paw icon nav for pet profiles-->
        <ImageButton
            android:id="@+id/navPaw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/paw"
            android:scaleType="centerInside"
            android:contentDescription="@string/nav_paw" />

        <!-- bowl icon for feed -->
        <ImageButton
            android:id="@+id/navHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/petbowl"
            android:scaleType="centerInside"
            android:contentDescription="@string/nav_home" />

        <!-- analytics icon for stats -->
        <ImageButton
            android:id="@+id/navStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/analytics"
            android:scaleType="centerInside"
            android:contentDescription="@string/nav_stats" />
    </LinearLayout>

</LinearLayout>
